[gd_scene load_steps=14 format=2]

[ext_resource path="res://components_lib/parametric_conveyor/scripts/RcsConveyor.gd" type="Script" id=1]
[ext_resource path="res://components_lib/parametric_conveyor/scene/Leg.tscn" type="PackedScene" id=2]
[ext_resource path="res://components_lib/parametric_conveyor/meshes/conveyor.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://components_lib/parametric_conveyor/meshes/knife_transition.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://components_lib/parametric_conveyor/materials/mat_1.material" type="Material" id=5]
[ext_resource path="res://components_lib/parametric_conveyor/materials/blue.tres" type="Material" id=6]
[ext_resource path="res://components_lib/parametric_conveyor/materials/black.tres" type="Material" id=7]
[ext_resource path="res://components_lib/parametric_conveyor/meshes/engine_right.mesh" type="ArrayMesh" id=11]
[ext_resource path="res://components_lib/parametric_conveyor/meshes/engine_left.mesh" type="ArrayMesh" id=12]
[ext_resource path="res://components_lib/parametric_conveyor/meshes/conveyor_belt.mesh" type="ArrayMesh" id=15]

[sub_resource type="BoxShape" id=1]
margin = 1.0
extents = Vector3( 0.49, 1, 0.33 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1000, 100, 30 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1000, 100, 35 )

[node name="conveyor" type="RcsConveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40995, 0 )
translation_axis = Vector3( 1, 0, 0 )
grab_all = null
drop_all = null
script = ExtResource( 1 )
height_conveyor_MM = 1748.7
width_conveyor_MM = 1375.8
length_conveyor_MM = 6000.0
number_of_leg = 20.0
height_board_MM = 350.0
availability_of_the_knife = "At the beginning and end of the conveyor"

[node name="Collision_conveyor" type="CollisionShape" parent="."]
transform = Transform( 6000, 0, 0, 0, 20, 0, 0, 0, 1375.8, 3000, 1796.7, -2.09808e-05 )
visible = false
shape = SubResource( 1 )

[node name="Conveyor" type="Spatial" parent="."]

[node name="Board" type="Spatial" parent="Conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1748.7, -9.657 )

[node name="Board_right" type="MeshInstance" parent="Conveyor/Board"]
transform = Transform( 5.69801, 0, 0, 0, 1, 0, 0, 0, 1, 0.0569801, 175, -655.143 )

[node name="board_right" type="MeshInstance" parent="Conveyor/Board/Board_right"]
transform = Transform( 1, 0, 0, 0, 3.5, 0, 0, 0, 1, 523.119, 17, 27.346 )
mesh = SubResource( 2 )
material/0 = ExtResource( 6 )

[node name="Board_left" type="MeshInstance" parent="Conveyor/Board"]
transform = Transform( 5.69801, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 175, 687.9 )

[node name="board_left" type="MeshInstance" parent="Conveyor/Board/Board_left"]
transform = Transform( -1, 0, -3.89414e-07, 0, 3.5, 0, 3.89414e-07, 0, -1, 521.79, 17.812, -12.79 )
mesh = SubResource( 3 )
material/0 = ExtResource( 6 )

[node name="Engine" type="Spatial" parent="Conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 44.5532, 1748.7, -9.65702 )

[node name="engine_right" type="MeshInstance" parent="Conveyor/Engine"]
transform = Transform( 0, -1, -4.0506e-17, -1, 0, -4.0506e-17, 4.0506e-17, 4.0506e-17, -1, 32, -156, -732.105 )
mesh = ExtResource( 11 )
material/0 = ExtResource( 7 )

[node name="engine_left" type="MeshInstance" parent="Conveyor/Engine"]
transform = Transform( 0, 0.999986, 0.00542794, -1, 0, 0, 0, -0.00542794, 0.999986, 32, -156, 752.105 )
mesh = ExtResource( 12 )
material/0 = ExtResource( 7 )

[node name="conveyor" type="MeshInstance" parent="Conveyor"]
transform = Transform( 5.69801, 0, 0, 0, 1, 0, 0, 0, 3.4395, 3000, 1748.7, 0 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 6 )

[node name="knife_transition_1" type="MeshInstance" parent="Conveyor/conveyor"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -6.70044, 7.84424, 0 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="knife_transition_2" type="MeshInstance" parent="Conveyor/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4603, 4.32465, 2.697 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="conveyor_belt" type="MeshInstance" parent="Conveyor/conveyor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.68164, 0 )
mesh = ExtResource( 15 )
material/0 = ExtResource( 5 )

[node name="Legs_Generator_1" type="RcsGridPartGenerator" parent="."]
transform = Transform( 1, 0, 0, 0, 2.45949, 0, 0, 0, 1, 1000, 0, -687.9 )
part_scene_path = "res://components_lib/parametric_conveyor/scene/Leg.tscn"
uuid = "02afc33a-a62a-4983-b160-70b92bc2f042"
row_step = Vector3( 500, 0, 0 )
rows = 10

[node name="Leg_1_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"

[node name="Leg_2_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 500, 0, 0 )

[node name="Leg_3_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1000, 0, 0 )

[node name="Leg_4_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1500, 0, 0 )

[node name="Leg_5_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2000, 0, 0 )

[node name="Leg_6_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2500, 0, 0 )

[node name="Leg_7_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3000, 0, 0 )

[node name="Leg_8_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3500, 0, 0 )

[node name="Leg_9_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4000, 0, 0 )

[node name="Leg_10_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_1" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4500, 0, 0 )

[node name="Legs_Generator_2" type="RcsGridPartGenerator" parent="."]
transform = Transform( 1, 0, 0, 0, 2.45949, 0, 0, 0, 1, 1000, 0, 687.9 )
part_scene_path = "res://components_lib/parametric_conveyor/scene/Leg.tscn"
uuid = "02afc33a-a62a-4983-b160-70b92bc2f042"
row_step = Vector3( 500, 0, 0 )
rows = 10

[node name="Leg_1_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"

[node name="Leg_2_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 500, 0, 0 )

[node name="Leg_3_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1000, 0, 0 )

[node name="Leg_4_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1500, 0, 0 )

[node name="Leg_5_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2000, 0, 0 )

[node name="Leg_6_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2500, 0, 0 )

[node name="Leg_7_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3000, 0, 0 )

[node name="Leg_8_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3500, 0, 0 )

[node name="Leg_9_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4000, 0, 0 )

[node name="Leg_10_02afc33a-a62a-4983-b160-70b92bc2f050" type="Spatial" parent="Legs_Generator_2" instance=ExtResource( 2 )]
creator_id = "02afc33a-a62a-4983-b160-70b92bc2f042"
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4500, 0, 0 )
